--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,23 @@
+# Ignore environment files
 .env
+.env.*
+frontend/.env
+backend/.env
+
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
